# cukereuse-release

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: draft-pdf.yml  tests.yml
analysis/: calibration.json  calibration_levmax_1.0.json  license_stratified.json  revision_baselines.json  revision_bootstrap_ci.json  revision_license_chisquare.json  revision_score_free_relabel.json  revision_size_vs_dup.json
corpus/: LABELING_RUBRIC.md  clone_manifest.jsonl  clusters_exact.parquet  clusters_hybrid.parquet  labeled_pairs.jsonl  labeled_pairs_overlap.jsonl  repos.csv  unlabeled_pairs.jsonl
paper/: main.tex  paper.bib  paper.md  references.bib
scripts/: build_corpus.py  calibrate_thresholds.py  clone_features.py  create_overlap_labels.py  generate_figures.py  license_stratified.py  mine_github.py  rehydrate.py  revision_analyses.py  run_analysis.py  sample_pairs.py  write_labels.py
src/cukereuse/: __init__.py  __main__.py  canonical.py  cli.py  clustering.py  models.py  parser.py  reporter.py  similarity.py
tests/: test_canonical.py  test_clustering.py  test_parser.py  test_similarity.py  test_smoke.py
tests/fixtures/: background_and_outline.feature  empty.feature  malformed.feature  minimal.feature  with_rule.feature
